tags: GET /tags + tests + docs
